refactoring using clean arch and created unit tests.
