# internal/delivery/http/handler.go
@@ -1,8 +1,8 @@
 package http
 
 import (
-	"github.com/felipeagger/go-boilerplate/internal/controller"
-	"github.com/felipeagger/go-boilerplate/internal/domain"
+	"github.com/felipeagger/go-boilerplate/internal/entity"
+	"github.com/felipeagger/go-boilerplate/internal/usecase/user"
 	"github.com/felipeagger/go-boilerplate/pkg/trace"
 	"github.com/gin-gonic/gin"
 	"net/http"
@@ -10,10 +10,13 @@ import (
 )
 
 type Handler struct {
+	UserSvc *user.Service
 }
 
-func NewHandler() Handler {
-	return Handler{}
+func NewHandler(userSvc *user.Service) *Handler {
+	return &Handler{
+		UserSvc: userSvc,
+	}
 }
 
 // HealthCheck godoc
@@ -37,23 +40,22 @@ func (h *Handler) HealthCheck(c *gin.Context) {
 // @Accept  json
 // @Produce  json
 // @Param X-Client-Id header string true "Client identifier"
-// @Param Payload body domain.Signup true "Payload"
-// @Success 201 {object} domain.Signup
+// @Param Payload body entity.Signup true "Payload"
+// @Success 201 {object} map[string]interface{}
 // @Failure 400 {object} string
 // @Router /user/v1/register [post]
 func (h *Handler) Register(c *gin.Context) {
 	ctx, span := trace.NewSpan(c.Request.Context(), "Handler.Register")
 	defer span.End()
 
-	clientID := c.GetHeader("X-Client-Id")
-	if clientID == "" {
-		c.AbortWithStatusJSON(http.StatusForbidden, "X-Client-Id not found in headers")
+	clientID, abort := commonsValidations(c)
+	if abort {
 		return
 	}
 
 	trace.AddSpanTags(span, map[string]string{"app.client_id": clientID})
 
-	var payload domain.Signup
+	var payload entity.Signup
 	if err := c.ShouldBindJSON(&payload); err != nil {
 		c.AbortWithStatusJSON(http.StatusUnprocessableEntity, gin.H{"error": err.Error()})
 		trace.AddSpanError(span, err)
@@ -61,7 +63,7 @@ func (h *Handler) Register(c *gin.Context) {
 		return
 	}
 
-	err := controller.CreateUser(ctx, payload)
+	err := h.UserSvc.CreateUser(ctx, payload)
 	if err != nil {
 		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": err.Error()})
 		trace.AddSpanError(span, err)
@@ -79,23 +81,22 @@ func (h *Handler) Register(c *gin.Context) {
 // @Accept  json
 // @Produce  json
 // @Param X-Client-Id header string true "Client identifier"
-// @Param Payload body domain.Login true "Payload"
-// @Success 200 {object} domain.LoginResponse
-// @Failure 401 {object} domain.LoginResponse
+// @Param Payload body entity.Login true "Payload"
+// @Success 200 {object} entity.LoginResponse
+// @Failure 401 {object} entity.LoginResponse
 // @Router /user/v1/login [post]
 func (h *Handler) Login(c *gin.Context) {
 	ctx, span := trace.NewSpan(c.Request.Context(), "Handler.Login")
 	defer span.End()
 
-	clientID := c.GetHeader("X-Client-Id")
-	if clientID == "" {
-		c.AbortWithStatusJSON(http.StatusForbidden, "X-Client-Id not found in headers")
+	clientID, abort := commonsValidations(c)
+	if abort {
 		return
 	}
 
 	trace.AddSpanTags(span, map[string]string{"app.client_id": clientID})
 
-	var payload domain.Login
+	var payload entity.Login
 	if err := c.ShouldBindJSON(&payload); err != nil {
 		c.AbortWithStatusJSON(http.StatusUnprocessableEntity, gin.H{"error": err.Error()})
 		trace.AddSpanError(span, err)
@@ -103,7 +104,7 @@ func (h *Handler) Login(c *gin.Context) {
 		return
 	}
 
-	response, err := controller.SignInUser(ctx, payload)
+	response, err := h.UserSvc.SignInUser(ctx, payload)
 	if err != nil {
 		c.AbortWithStatusJSON(http.StatusUnauthorized, response)
 		trace.AddSpanError(span, err)
@@ -122,8 +123,8 @@ func (h *Handler) Login(c *gin.Context) {
 // @Produce  json
 // @Param X-Client-Id header string true "Client identifier"
 // @Param X-Authorization header string true "Auth Token"
-// @Param Payload body domain.Signup true "Payload"
-// @Success 200 {object} domain.Signup
+// @Param Payload body entity.Signup true "Payload"
+// @Success 200 {object} map[string]interface{}
 // @Failure 400 {object} string
 // @Failure 500 {object} string
 // @Router /user/v1 [put]
@@ -131,16 +132,15 @@ func (h *Handler) Update(c *gin.Context) {
 	ctx, span := trace.NewSpan(c.Request.Context(), "Handler.Update")
 	defer span.End()
 
-	clientID := c.GetHeader("X-Client-Id")
-	if clientID == "" {
-		c.AbortWithStatusJSON(http.StatusForbidden, "X-Client-Id not found in headers")
+	clientID, abort := commonsValidations(c)
+	if abort {
 		return
 	}
 
 	trace.AddSpanTags(span, map[string]string{"app.client_id": clientID, "app.user_id": c.GetHeader("X-User-Id")})
 	userID, _ := strconv.ParseInt(c.GetHeader("X-User-Id"), 10, 64)
 
-	var payload domain.Signup
+	var payload entity.Signup
 	if err := c.ShouldBindJSON(&payload); err != nil {
 		c.AbortWithStatusJSON(http.StatusUnprocessableEntity, gin.H{"error": err.Error()})
 		trace.AddSpanError(span, err)
@@ -148,7 +148,7 @@ func (h *Handler) Update(c *gin.Context) {
 		return
 	}
 
-	if err := controller.UpdateUser(ctx, userID, payload); err != nil {
+	if err := h.UserSvc.UpdateUser(ctx, userID, payload); err != nil {
 		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		trace.AddSpanError(span, err)
 		trace.FailSpan(span, "Internal Server Error")
@@ -156,4 +156,38 @@ func (h *Handler) Update(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, gin.H{"msg": "Updated"})
+}
+
+// Delete godoc
+// @Summary Endpoint to delete user
+// @Description Endpoint to delete user
+// @Tags Delete
+// @Accept  json
+// @Produce  json
+// @Param X-Client-Id header string true "Client identifier"
+// @Param X-Authorization header string true "Auth Token"
+// @Success 200 {object} map[string]interface{}
+// @Failure 400 {object} string
+// @Failure 500 {object} string
+// @Router /user/v1 [delete]
+func (h *Handler) Delete(c *gin.Context) {
+	ctx, span := trace.NewSpan(c.Request.Context(), "Handler.Delete")
+	defer span.End()
+
+	clientID, abort := commonsValidations(c)
+	if abort {
+		return
+	}
+
+	trace.AddSpanTags(span, map[string]string{"app.client_id": clientID, "app.user_id": c.GetHeader("X-User-Id")})
+	userID, _ := strconv.ParseInt(c.GetHeader("X-User-Id"), 10, 64)
+
+	if err := h.UserSvc.DeleteUser(ctx, userID); err != nil {
+		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		trace.AddSpanError(span, err)
+		trace.FailSpan(span, "Bad Request")
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{"msg": "Deleted"})
 }
